# multisphere-cpp

./: .gitignore  LICENSE  MultisphereConfig.md  README.md  README_CONFIG.md  pyproject.toml
examples/: CMakeCache.txt  Makefile  cmake_install.cmake  debug_output.stl  example_from_ice_cream_voxels.py  example_from_mesh.py  example_from_voxels.py  example_mesh.stl  example_voxels.npy  from_mesh_boosted_spheres.vtk  from_mesh_spheres.csv  from_mesh_spheres.vtk  ice_cream_cone.npy  ice_cream_cone.stl  multisphere_app  multisphere_boost  multisphere_mesh  reconstructed_cheese.csv  reconstructed_cheese.vtk  reconstructed_cluster.csv  reconstructed_cluster.vtk  reconstructed_double_spheres.csv  reconstructed_double_spheres.vtk  reconstructed_ice_cream_boost.vtk  reconstructed_ice_cream_no_boost.csv  reconstructed_l_shape.csv  reconstructed_l_shape.vtk  reconstructed_rectangle_spheres.csv  reconstructed_rectangle_spheres.vtk  reconstructed_spheres.csv  reconstructed_spheres.vtk  reconstructed_sputnik.csv  reconstructed_sputnik.vtk  reconstructed_torus.csv  reconstructed_torus.vtk  reconstructed_tumor.csv  reconstructed_tumor.vtk  stanford-bunny.stl  swiss_cheese.stl  utah_teapot.stl
src/: CMakeLists.txt  gemss_gui.cpp  main.cpp  main_boost.cpp  main_box.cpp  main_collision.cpp  main_convergence_test.cpp  main_cube.cpp  main_mesh.cpp  main_rectangle.cpp  main_shape_validation.cpp  main_split.cpp  secondary_convergence_test.cpp
src/GEMSS/: CMakeLists.txt  GEMSS-interface.h  GEMSSConfig.cmake.in  GEMSS_config.hpp  GEMSS_datatypes.hpp  GEMSS_io.hpp  GEMSS_mesh_handler.hpp  GEMSS_physics_computation.hpp  GEMSS_reconstruction.hpp  GEMSS_reconstruction_helpers.hpp  GEMSS_split.hpp  GEMSS_voxel_processing.hpp
src/include/: multisphere-interface.h  multisphere_config.hpp  multisphere_datatypes.hpp  multisphere_io.hpp  multisphere_mesh_handler.hpp  multisphere_physics_computation.hpp  multisphere_reconstruction.hpp  multisphere_reconstruction_helpers.hpp  multisphere_voxel_processing.hpp
src/multisphere/: multisphere_reconstruction.py
src/multisphere-cpp/: CMakeLists.txt  backup   main.cpp  main_boost.cpp  main_collision.cpp  main_mesh.cpp  multisphere_datatypes.hpp  multisphere_io.hpp  multisphere_mesh_handler.hpp  multisphere_reconstruction.hpp  multisphere_reconstruction_helpers.hpp  multisphere_visualization.hpp  multisphere_voxel_processing.hpp
src/multisphrere-cpp/: CMakeLists.txt  main.cpp  main_cow.cpp  main_mesh.cpp  multisphere_datatypes.hpp  multisphere_mesh_handler.hpp  multisphere_reconstruction_helpers.hpp  multisphere_utils.hpp  multisphere_voxel_processing.hpp
